--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class= "container-content" >
         <a href="https://youtube.com/@lapiskaramel" class="a-content">
           <img src="channel_p.jpg" class="img-content"/>
-          <p>Mmampir ke channel youtube👍</p>
+          <p>Mampir ke channel youtube👍</p>
         </a>
         
       </div>
